test/test_wrong_return_type_has_forward/test_wrong_return_type_has_forward.out
error: Expected int as a return type but got bool
 --> test/test_wrong_return_type_has_forward/test_wrong_return_type_has_forward.mvs:2:1
  |
2 | func a() bool {
  | ^
  |
hint: Consider changing the return type, or checking the function signature.
