test/test_wrong_return_type_has_forward/test_wrong_return_type_has_forward.mvs
[fwd] func a() int;
func a() bool {
	return false;
}
